fixing filtersBooks/ add favorites routes
